Tests/RunCMake/CMakePresets/CommentValidOldSchema-stderr.txt
^CMake Error: Could not read presets from .*
Error: @2,15: Invalid extra field \"\$comment\" in root object
